--- a/css/styles.css
+++ b/css/styles.css
@@ -437,6 +437,7 @@ img {
   outline: none;
   margin-left: 80px;
   padding-left: 16px;
+  color: #e7e9fc;
 }
 .online-input::placeholder {
   font-weight: 400;
@@ -674,6 +675,7 @@ img {
   border-radius: 4px;
   outline: none;
   transition: border 250ms linear;
+  padding-left: 38px;
 }
 
 .input-comment {
@@ -736,6 +738,7 @@ img {
   padding: 16px 32px;
   min-width: 170px;
   margin: 30px auto 0;
+  resize: none;
   transition: background-color 250ms linear;
 }
 .input-button:hover,
