--- a/css/styles.css
+++ b/css/styles.css
@@ -417,25 +417,27 @@ img {
 .footer-messenger-link:focus {
   background-color: #31d0aa;
 }
+.online-form {
+  margin-left: 80px;
+}
 
 .footer-input-paragraph {
-  padding-left: 80px;
   font-weight: 600;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--main-color);
   margin-bottom: 16px;
+  gap: 16px;
 }
 .online-input {
-  width: 264px;
+  width: 263px;
   height: 40px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
   outline: none;
-  margin-left: 80px;
   padding-left: 16px;
   color: #e7e9fc;
 }
@@ -447,10 +449,10 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 .online-button {
-  position: relative;
+  margin-left: 24px;
   width: 165px;
   height: 40px;
-  padding: 8px 24px 8px 24px;
+  padding: 8px 24px;
   overflow: none;
   background-color: var(--link-color);
   border: 0;
@@ -458,7 +460,6 @@ img {
   font-weight: 600;
   font-size: 16px;
   line-height: 1.5;
-  align-items: center;
   letter-spacing: 0.04em;
   color: var(--main-color);
   text-align: left;
@@ -619,7 +620,8 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 500px;
+  width: 408px;
+  height: 584px;
   min-height: 600px;
   background-color: #fcfcfc;
   border-radius: 4px;
@@ -669,7 +671,7 @@ img {
 }
 .modal-input {
   width: 100%;
-  height: 58px;
+  height: 40px;
   background-color: transparent;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -691,6 +693,7 @@ img {
   resize: none;
 }
 .input-comment::placeholder {
+  display: block;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.33;
@@ -770,6 +773,10 @@ img {
   color: #757575;
   padding-top: 16px;
 }
+.input-href {
+  color: #4d5ae5;
+}
+
 .check-text span {
   width: 16px;
   height: 16px;
